--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,16 @@
     <artifactId>selenium-java</artifactId>
     <version>4.13.0</version>
 </dependency>
+<dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-api</artifactId>
+    <version>1.7.5</version>
+</dependency>
+<dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-simple</artifactId>
+    <version>1.7.5</version>
+</dependency>
   </dependencies>
 
   <build>
